@@ -1,0 +1,303 @@
+; Joomla! Project
+; Copyright (C) 2005 - 2013 Open Source Matters. All rights reserved.
+; License GNU General Public License version 2 or later; see LICENSE.txt
+; Note : All ini files need to be saved as UTF-8
+
+
+
+;Stepbar
+INSTL_STEP_COMPLETE_LABEL="Coilean"
+INSTL_STEP_DATABASE_LABEL="Stòr-dàta"
+INSTL_STEP_DEFAULTLANGUAGE_LABEL="Tagh cànan bunaiteach"
+INSTL_STEP_FTP_LABEL="FTP"
+INSTL_STEP_LANGUAGE_LABEL="Cànan"
+INSTL_STEP_LANGUAGES_LABEL="Stàlaich cànan"
+INSTL_STEP_LICENSE_LABEL="Ceadachas"
+INSTL_STEP_PREINSTALL_LABEL="Sgrùdadh ron stàladh"
+INSTL_STEP_SITE_LABEL="Rèiteachadh"
+INSTL_STEP_SUMMARY_LABEL="Foir-shealladh"
+INSTL_STEPS_TITLE="Ceuman"
+
+;Language view
+INSTL_LANGUAGE_TITLE="Tagh cànan"
+INSTL_SELECT_LANGUAGE_DESC="Tagh an cànan a bu toigh leat cleachdadh ann an stàladh Joomla!:"
+INSTL_SELECT_LANGUAGE_TITLE="Tagh cànan"
+INSTL_WARNJAVASCRIPT="Rabhadh! Feumaidh JavaScript a bhith an comas mus urrainn dhut Joomla! a stàladh"
+INSTL_WARNJSON="Tha an stàladh PHP agad feumach air JSON a bhith an comas mus gabh Joomla a stàladh!"
+
+;Preinstall view
+INSTL_PRECHECK_TITLE="Sgrùdadh ron stàladh"
+INSTL_PRECHECK_FOR_VERSION="An sgrùdadh ro stàladh %s:"
+INSTL_PRECHECK_DESC="Mur eil taic ann do ghin dhe na rudan seo ('ga chomharradh le <strong class="_QQ_"red"_QQ_">Chan eil</strong>), feumaidh tu sin a rèiteachadh. Mura rèitich thu e, faodaidh nach obraich an stàladh agad de Joomla! mar bu chòir."
+INSTL_PRECHECK_RECOMMENDED_SETTINGS_TITLE="Roghainnean molta:"
+INSTL_PRECHECK_RECOMMENDED_SETTINGS_DESC="Mholar na roghainnean PHP seo gus làn cho-chòrdalachd le Joomla a dhèanamh cinnteach.<br />Ge-tà, obraichidh Joomla! fhathast mur eil na roghainnean agad gu tur a-rèir na mholar."
+INSTL_PRECHECK_DIRECTIVE="Feartan"
+INSTL_PRECHECK_RECOMMENDED="Molta"
+INSTL_PRECHECK_ACTUAL="Làithreach"
+
+; Database view
+INSTL_DATABASE="Rèiteachadh an stòir-dhàta"
+INSTL_DATABASE_HOST_DESC="'S e seo &quot;localhost&quot; mar is trice"
+INSTL_DATABASE_HOST_LABEL="Ainm an òstair"
+INSTL_DATABASE_NAME_DESC="Chan eil ach aon stòr-dàta ceadaichte ceadaichte air an làrach air cuid dha na h-òstairean. Mas e òstair mar sin a tha agad, cleachd ro-leasachan clàir sònraichte airson gach làrach Joomla!."
+INSTL_DATABASE_NAME_LABEL="Ainm stòir-dhàta"
+INSTL_DATABASE_NO_SCHEMA="Chan eil sgeama stòir-dhàta ann airson a leithid seo de stòr-dàta."
+INSTL_DATABASE_OLD_PROCESS_DESC="Thèid rud ùr a chur an àite lethbhreacan-glèidhidh de sheann chlàir Joomla!"
+INSTL_DATABASE_OLD_PROCESS_LABEL="Seann phròiseas stòir-dhàta"
+INSTL_DATABASE_PASSWORD_DESC="Feumaidh tu facal-faire a chleachdadh airson cunntas mysql a chum tèarainteachd na làraich"
+INSTL_DATABASE_PASSWORD_LABEL="Facal-faire"
+INSTL_DATABASE_PREFIX_DESC="Tagh ro-leasachan airson a' chlàir no cleachd fear <b>air thuaiream</b>. Bu chòir trì no ceithir caractairean a bhith ann, as aonais dad ach àireamhan is litrichean agus FEUMAIDH loidhne foidhe a bhith aig a' cheann thall.<b>Dèan cinnteach nach eil clàr eile ann a tha a' cur gu feum an ro-leasachan seo</b>."
+INSTL_DATABASE_PREFIX_LABEL="Ro-leasachan a' chlàir"
+INSTL_DATABASE_PREFIX_MSG="Feumaidh ro-leasachan a' chlàir tòiseachadh le litir agus faodaidh àireamhan is litrichean a bhith 'na dhèidh agus an uairsin loidhne foidhe"
+INSTL_DATABASE_TYPE_DESC="'S e seo &quot;MySQLi&quot; mar is trice"
+INSTL_DATABASE_TYPE_LABEL="Seòrsa an stòir-dhàta"
+INSTL_DATABASE_USER_DESC="Rudeigin mar "_QQ_"root"_QQ_" no ainm chleachdaiche a thug an t-òstair dhut"
+INSTL_DATABASE_USER_LABEL="Ainm cleachdaiche"
+INSTL_DATABASE_TITLE="Roghainnean a' cheangail"
+INSTL_DATABASE_DESC="<p>Cumaidh làrach Joomla! an dàta gu lèir aice ann an stòr-dàta. Gheibh am prògram stàlaidh na dh'fheumas e de dh'fhiosrachadh air an sgrìn seo gus an stòr-dàta a chruthachadh.</p><p> Ma tha thu a' stàladh Joomla! air frithealaiche cèin, bidh agad ris an fhiosrachadh seo fhaighinn on òstair agad.</p><p>Tha cuid dhe na h-òstairean ag iarraidh ort stòd-dàta a chruthachadh mus stàlaich thu Joomla. Ma chì thu an teachdaireachd "_QQ_"Cha do ghabh ceangal ris an stòr-dàta a stèidheachadh"_QQ_", dèan cinnteach gu bheil an t-ainm cleachdaiche is am facal-faire agad ceart. Ma chì thu an teachdaireachd seo fhathast, thoir sùil ach a bheil agad ri stòr-dàta a chruthachadh must stàlaich thu Joomla.</p>" 
+
+;FTP view
+INSTL_AUTOFIND_FTP_PATH="Lorg slighe FTP leis fhèin"
+INSTL_FTP="Rèiteachadh FTP"
+INSTL_FTP_DESC="<p>Bidh agad ri fiosrachadh cunntais FTP a chur ann air cuid dhe na frithealaichean mus coilean an stàladh. Ma dh'èirich duilgheadas leis an stàladh as aonais an fhiosrachaidh seo, faighnich dhen òstair agad a bheil feum air seo. </p><p>B' fheairrde dhut cunntas FTP fa leth ('s aig nach bi inntrigeadh ach do stàladh Joomla! agus chan ann dhan làrach air fad) a chruthachadh air sgàth tèarainteachd . Cuidichidh an t-òstair agad thu le seo.</p><p><b>An aire:</b> Ma tha thu 'ga stàladh air siostam Windows, <strong>chan eil</strong> feum air a' bhreath FTP.</p>"
+INSTL_FTP_ENABLE_LABEL="Cuir am breath FTP an comas"
+INSTL_FTP_HOST_LABEL="Òstair FTP"
+INSTL_FTP_PASSWORD_LABEL="Facal-faire FTP"
+INSTL_FTP_PORT_LABEL="Port FTP"
+INSTL_FTP_ROOT_LABEL="FTP Root Path"
+INSTL_FTP_SAVE_LABEL="Sàbhail am facal-faire FTP"
+INSTL_FTP_TITLE="Rèiteachadh FTP (<strong class="_QQ_"red"_QQ_">Roghainneil - 'S urrainn dhan mhòrchuid leum a thoirt thairis air seo - Briog air 'Air adhart' gus leumadh thairis air</strong>)"
+INSTL_FTP_USER_LABEL="Ainm cleachdaiche FTP"
+INSTL_SITE_NAME_LABEL="Ainm na làraich"
+INSTL_VERIFY_FTP_SETTINGS="Dearbhaich na roghainnean FTP"
+INSTL_FTP_SETTINGS_CORRECT="Chan eil càil cearr air na roghainnean"
+INSTL_FTP_USER_DESC="Rabhadh! Mholamaid dhut seo fhàgail bàn agus an t-ainm FTP agad a chur a-steach gach turas a ghluaiseas tu faidhlichean."
+INSTL_FTP_PASSWORD_DESC="Rabhadh! Mholamaid dhut seo fhàgail bàn agus am facal-faire FTP agad a chur a-steach gach turas a ghluaiseas tu faidhlichean."
+
+;Site View
+INSTL_SITE="Prìomh Rèiteachadh"
+INSTL_ADMIN_EMAIL_LABEL="Post-d an rianaire"
+INSTL_ADMIN_EMAIL_DESC="Cuir a-steach post-d. Seo am post-d a bhios ag sàr-rianaire na làraich-lìn."
+INSTL_ADMIN_PASSWORD_LABEL="Facal-faire an rianaire"
+INSTL_ADMIN_PASSWORD_DESC="Suidhich facal-faire cunntas an t-sàr-rianaire agus dearbh e san raon gu h-ìosal."
+INSTL_ADMIN_PASSWORD2_LABEL="Dearbhaich facal-faire an rianaire"
+INSTL_ADMIN_USER_LABEL="Ainm an rianaire"
+INSTL_ADMIN_USER_DESC="'S urrainn dhut an t-ainm bunaiteach (<strong>admin</strong>) atharrachadh."
+INSTL_SITE_NAME_TITLE="Ainm na làraich"
+INSTL_SITE_NAME_DESC="Cuir a-steach ainm na làraich Joomla! agad."
+INSTL_SITE_METADESC_LABEL="Tuairisgeul meta"
+INSTL_SITE_METADESC_TITLE_LABEL="Cuir a-steach tuairisgeul na làraich air fad airson nan einnseanan luirg. Cha mholar dhut barrachd air 20 facal a chleachdadh mar is trice."
+INSTL_SITE_OFFLINE_LABEL="Tha an làrach far loidhne"
+INSTL_SITE_OFFLINE_TITLE_LABEL="Cuir làrach a' phobaill far loidhne nuair a thig an stàladh gu crìoch. 'S urrainn dhut an làrach a chur air loidhne a-rithist an dèidh sin tro rèiteachadh uile-choitcheann."
+INSTL_SITE_INSTALL_SAMPLE_LABEL="Stàlaich ball-sampaill an dàta"
+INSTL_SITE_INSTALL_SAMPLE_DESC="Ma tha thu ag ùr-thòiseachadh air Joomla!, mholamaid dhut gu mòr ball-sampaill dàta a stàladh. Cuiridh seo an sàs sampall de dhàta on phacaid stàlaidh aig Joomla."
+INSTL_SITE_INSTALL_SAMPLE_NONE="Chan eil gin"
+INSTL_SAMPLE_BLOG_SET="Blog English (GB) Sample Data"
+INSTL_SAMPLE_BROCHURE_SET="Brochure English (GB) Sample Data"
+INSTL_SAMPLE_DATA_SET="Default English (GB) Sample Data"
+INSTL_SAMPLE_LEARN_SET="Learn Joomla English (GB) Sample Data"
+INSTL_SAMPLE_TESTING_SET="Test English (GB) Sample Data"
+
+;Summary view
+INSTL_FINALISATION="A' coileanadh"
+INSTL_SUMMARY_INSTALL="Stàlaich"
+INSTL_SUMMARY_EMAIL_LABEL="Rèiteachadh puist-d"
+INSTL_SUMMARY_EMAIL_DESC="Cuir roghainnean an rèiteachadh gu %s ann am post-d an dèidh dhan stàladh coileanadh."
+INSTL_SUMMARY_EMAIL_PASSWORDS_LABEL="Gabh a-steach na faclan-faire sa phost-d"
+INSTL_SUMMARY_EMAIL_PASSWORDS_DESC="Rabhadh! Cha mholamaid dhut faclan faire a chumail no a chur ann am post-d."
+
+;Installing view
+INSTL_INSTALLING="'Ga stàladh..."
+INSTL_INSTALLING_DATABASE_BACKUP="A' dèanamh lethbhreac-glèidhidh de chlàir an t-seann stòir-dhàta"
+INSTL_INSTALLING_DATABASE_REMOVE="A' toirt air falbh clàir an t-seann-stòir-dhàta"
+INSTL_INSTALLING_DATABASE="A' cruthachadh clàir an stòir-dhàta"
+INSTL_INSTALLING_SAMPLE="A' stàladh ball-sampaill an dàta"
+INSTL_INSTALLING_CONFIG="A' cruthachadh faidhle an rèiteachaidh"
+INSTL_INSTALLING_EMAIL="A' cur post-d gu %s"
+
+;Email
+INSTL_EMAIL_SUBJECT="Mion-fhiosrachadh an rèiteachaidh: %s"
+INSTL_EMAIL_HEADING="Chì thu na roghainnean rèiteachaidh airson làrach-lìn Joomla! ùr-nodha gu h-ìosal:"
+INSTL_EMAIL_NOT_SENT="Cha b' urrainn dhuinn am post-d a chur."
+
+;Complete view
+INSTL_COMPLETE="Deiseil"
+INSTL_COMPLETE_ADMINISTRATION_LOGIN_DETAILS="Logadh a-steach nan rianairean"
+INSTL_COMPLETE_DESC1="Briog air a' phutan Site gus an làrach Joomla! agad fhaicinn no air a' phutan Admin gus logadh a-steach dhan phanail rianaireachd."
+INSTL_COMPLETE_DESC2="Ma thèid thu gu làrachd coimhearsnachd Joomla!, gheibh thu grunn cheanglaichean do phacaidean cànain agus goireasan cànain eile air na làraichean aig teaghlach joomla.org."
+INSTL_COMPLETE_DESC3="Briog air a' phutan air an taobh chlì gus làrach na coimhearsnachd fhosgladh ann an uinneag ùr."
+INSTL_COMPLETE_ERROR_FOLDER_ALREADY_REMOVED="Chaidh am pasgan stàlaidh a sguabadh às mu thràth."
+INSTL_COMPLETE_ERROR_FOLDER_DELETE="Cha do ghabh am pasgan stàlaidh a sguabadh às. Tha agad ris a sguabadh às de làimh."
+INSTL_COMPLETE_FOLDER_REMOVED="Chaidh am pasgan stàlaidh a sguabadh às mu thràth"
+INSTL_COMPLETE_LANGUAGE_1="Joomla! 'nad chànan fhèin?"
+INSTL_COMPLETE_LANGUAGE_DESC="Mus doir thu air falbh am pasgan stàlaidh, 's urrainn dhut barrachd chànan a stàladh. Ma tha thu airson sin a dhèanamh, briog air a' phutan a leanas."
+INSTL_COMPLETE_LANGUAGE_DESC2="An aire: Feumaidh tu ceangal ris an eadar-lìon ach an urrainn dha Joomla! na cànain ùra a luchdadh a-nuas agus a stàladh. <br/>Cha leig cuid dhe na frithealaichean le Joomla! cànain a stàladh. Mas ann mar sin a tha cùisean, na gabh dragh, 's urrainn dhut an stàladh an dèidh seo fhathast leis an rianaire Joomla!."
+INSTL_COMPLETE_REMOVE_FOLDER="Thoir air falbh am pasgan stàlaidh"
+INSTL_COMPLETE_REMOVE_INSTALLATION="NA DÌOCHUIMHNICH GU BHEIL AGAD RIS<br />AM PASGAN installation A THOIRT AIR FALBH.<br />Chan urrainn dhut leantainn air adhart ach nuair a bhios tu air am pasgan stàlaidh a thoirt às. 'S e gleus tèarainteachd aig Joomla! a tha seo."
+INSTL_COMPLETE_TITLE="Meal do naidheachd! Tha Joomla! air a stàladh a-nis."
+INSTL_COMPLETE_INSTALL_LANGUAGES="Ceuman a bharrachd: Stàlaich cànain"
+
+;Languages view
+INSTL_LANGUAGES="Stàlaich pacaidean cànain"
+INSTL_LANGUAGES_COLUMN_HEADER_LANGUAGE="Cànan"
+INSTL_LANGUAGES_COLUMN_HEADER_VERSION="Tionndadh"
+INSTL_LANGUAGES_DESC="Tha Joomla! ri fhaighinn ann an iomadh cànan. Tagh an fheadhainn a tha thu ag iarraidh 's tu a' cur cromagan sna bogsaichean agus stàlaich iad an uairsin leis a' phutan "Air adhart".<br/>An aire: Feumaidh seo mu 5 diogan airson gach cànan a luchdadh a-nuas is a stàladh. Na tagh barrachd air 3 cànain air eagal 's gum bi timeout ann."
+INSTL_LANGUAGES_MESSAGE_PLEASE_WAIT="Feumaidh seo suas ri 10 diogan airson gach cànan.<br />Fuirich ort fhad 's a stàlaicheas sinn na cànain..."
+INSTL_LANGUAGES_NO_LANGUAGE_SELECTED="Feuch is tagh cànan. Mur eil thu ag iarraidh cànain eile, briog air "Air ais""
+INSTL_LANGUAGES_WARNING_NO_INTERNET="Cha b' urrainn dha Joomla! ceangal a dhèanamh ri frithealaiche nan cànan. Coilean am pròiseas stàlaidh."
+INSTL_LANGUAGES_WARNING_NO_INTERNET2="An aire: 'S urrainn dhut cànain a stàladh an dèidh seo fhathast leis an rianaire Joomla!
+INSTL_LANGUAGES_WARNING_BACK_BUTTON="Till dhan cheum roimhe san stàladh"
+
+;Defaultlanguage view
+INSTL_DEFAULTLANGUAGE_ADMINISTRATOR="Cànan bunaiteach an rianaire"
+INSTL_DEFAULTLANGUAGE_ADMIN_COULDNT_SET_DEFAULT="Cha b' urrainn dha Joomla! cànan bunaiteach an rianaire a shuidheachadh. Thèid Beurla a chleachdadh mar chànan RIANAIREACHD sa backend."
+INSTL_DEFAULTLANGUAGE_ADMIN_SET_DEFAULT="Shuidhich Joomla! %s mar chànan bunaiteach na RIANAIREACHD."
+INSTL_DEFAULTLANGUAGE_COLUMN_HEADER_SELECT="Tagh"
+INSTL_DEFAULTLANGUAGE_COLUMN_HEADER_LANGUAGE="Cànan"
+INSTL_DEFAULTLANGUAGE_COLUMN_HEADER_TAG="Taga"
+INSTL_DEFAULTLANGUAGE_COULD_NOT_INSTALL_LANGUAGE="Cha b' urrainn dha Joomla! %s a stàladh."
+INSTL_DEFAULTLANGUAGE_DESC="Stàlaich Joomla! na cànain a leanas. Tagh am fear a bu mhath leat cleachdadh mar chànan na rianaireachd ann an Joomla! agus briog air a' phutan "Air adhart" an uairsin."
+INSTL_DEFAULTLANGUAGE_DESC_FRONTEND=""Stàlaich Joomla! na cànain a leanas. Tagh am fear a bu mhath leat cleachdadh mar chànan a' frontend ann an Joomla! agus briog air a' phutan "Air adhart" an uairsin."
+INSTL_DEFAULTLANGUAGE_FRONTEND="Cànan bunaiteach na làraich"
+INSTL_DEFAULTLANGUAGE_FRONTEND_COULDNT_SET_DEFAULT="Cha b' urrainn dha Joomla! an cànan bunaiteach a shuidheachadh. Thèid Beurla a chleachdadh mar chànan frontend na LÀRAICH."
+INSTL_DEFAULTLANGUAGE_FRONTEND_SET_DEFAULT="Shuidhich Joomla! %s mar chànan bunaiteach na LÀRAICH."
+INSTL_DEFAULTLANGUAGE_NOTE="An aire: Turas a bhriogas tu air "Air adhart", thèid do thilleadh gu deireadh a' phròiseis stàlaidh agus thèid iarraidh ort am pasgan stàlaidh a sguabadh às."
+INSTL_DEFAULTLANGUAGE_TABLE_HEADER="Tagh do chànan bunaiteach"
+INSTL_DEFAULTLANGUAGE_TRY_LATER="'S urrainn dhut cànain a stàladh an dèidh seo fhathast leis an rianaire Joomla!"
+
+;Database Model
+INSTL_DATABASE_COULD_NOT_CONNECT="Cha ghabh ceangal a dhèanamh ris an stòr-dàta. Thill an ceanglaiche an àireamh: %s"
+INSTL_DATABASE_COULD_NOT_REFRESH_MANIFEST_CACHE="Cha do ghabh am Manifest Cache airson an leudachan a leanas ùrachadh: %s"
+INSTL_DATABASE_EMPTY_NAME=""
+INSTL_DATABASE_ERROR_BACKINGUP="Thachair grunn mhearachdan nuair a rinneadh lethbhreac-glèidhidh dhen stòr-dàta."
+INSTL_DATABASE_ERROR_CREATE="Thachair mearachd nuair a chaidh oidhirp a dhèanamh an stòr-dàta %s a chruthachadh.<br />'S mathaid nach eil ùghdaras gu leòr aig a' chleachdaiche gus stòr-dàta a chruthachadh. Faodaidh gum bi agad ris an stòr-dàta a chruthachadh co-dhiù mus urrainn dhut Joomla! a stàladh."
+INSTL_DATABASE_ERROR_DELETE="Thachair grunn mhearachdan nuair a sguabadh às an stòr-dàta."
+INSTL_DATABASE_ERROR_INITIALISE_SCHEMA="Mearachd le tòiseachadh àireamh tionndadh an sgeama"
+INSTL_DATABASE_FIELD_VALUE_REMOVE="Thoir air falbh"
+INSTL_DATABASE_FIELD_VALUE_BACKUP="Dèan lethbhreac-glèidhich"
+INSTL_DATABASE_FIX_TOO_LONG="Chan fhaod ro-leasachan a' chlàir MySQL a bhith nas fhaide na 15 caractairean."
+INSTL_DATABASE_INVALID_DB_DETAILS="Tha am fiosrachadh a chuir thu ann mun stòr-dàta cearr no bàn."
+INSTL_DATABASE_INVALID_MYSQL_VERSION="Feumaidh tu MySQL 5.0.4 no fear nas ùire gus leantainn air adhart leis an stàladh. 'S e seo an tionndadh a tha agad: %s"
+INSTL_DATABASE_INVALID_MYSQLI_VERSION="Feumaidh tu MySQL 5.0.4 no fear nas ùire gus leantainn air adhart leis an stàladh. 'S e seo an tionndadh a tha agad: %s"
+INSTL_DATABASE_INVALID_SQLSRV_VERSION="Feumaidh tu SQL Server 2008 R2 (10.50.1600.1) no fear nas ùire gus leantainn air adhart leis an stàladh. 'S e seo an tionndadh a tha agad: %s"
+INSTL_DATABASE_INVALID_SQLZURE_VERSION="Feumaidh tu SQL Server 2008 R2 (10.50.1600.1) no fear nas ùire gus leantainn air adhart leis an stàladh. 'S e seo an tionndadh a tha agad: %s"
+INSTL_DATABASE_INVALID_TYPE="Tagh seòrsa an stòr-dàta"
+INSTL_DATABASE_NAME_TOO_LONG="Chan fhaod ainm an stòir-dhàta MySQL a bhith nas fhaide na 64 caractair air a' char as fhaide."
+INSTL_DATABASE_PREFIX_INVALID_CHARS="Feumaidh ro-leasachan a' chlàir MySQL tòiseachadh le litir agus litrichean, àireamhan is loidhnichean fodha 'na dhèidh a-mhàin."
+INSTL_DATABASE_INVALID_NAME="Mas e tionndadh MySQL nas sine na 5.1.6 a tha agad, chan fhaod puingean no caractairean "_QQ_"sònraichte"_QQ_" a bhith san ainm. 'S e seo an tionndadh agad: %s"
+INSTL_DATABASE_NAME_INVALID_SPACES="Chan fhaod àitichean bàna a bhith aig toiseach no deireadh de dh'ainmean stòr-dhàtannan MySQL."
+INSTL_DATABASE_NAME_INVALID_CHAR="Chan fhaod NUL ASCII(0x00) a bhith ann an aithnichear MySQL."
+INSTL_DATABASE_FILE_DOES_NOT_EXIST="Chan eil am faidhle %s ann"
+
+;controllers
+INSTL_COOKIES_NOT_ENABLED="Tha coltas nach gabh am brabhsair agad ri briosgaidean. Chan urrainn dhut an aplacaid a stàladh mura gabh thu ris na briosgaidean seo. Air neo, faodaidh gu bheil duilgheadas ann le <strong>session.save_path</strong> an fhrithealaiche. Ma thachras seo, leig fios dhan t-solaraiche agad mur eil fhios agad-sa mar a rèiticheas tu seo."
+INSTL_HEADER_ERROR="Mearachd"
+
+;Helpers
+INSTL_PAGE_TITLE="Stàlaichear-lìn Joomla!"
+
+;Configuration model
+INSTL_ERROR_CONNECT_DB="Cha ghabh ceangal a dhèanamh ris an stòr-dàta. Thill an ceanglaiche an àireamh: %s"
+INSTL_STD_OFFLINE_MSG="Tha an làrach seo 'na thàmh fad greis airson obair càraidh.<br /> Nach till thu a dh'aithghearr?"
+
+;FTP model
+INSTL_FTP_INVALIDROOT="Chan eil an t-eòlaire FTP a shònraich thu agus eòlaire stàlaidh Joomla! seo co-ionnann"
+INSTL_FTP_NOCONNECT="Cha do ghabh ceangal a dhèanamh ris an fhrithealaiche FTP"
+INSTL_FTP_NODELE="Dh'fhàillig am foincsean "_QQ_"DELE"_QQ_"."
+INSTL_FTP_NODIRECTORYLISTING="Cha do ghabh liosta nan eòlairean fhaighinn on fhrithealaiche FTP."
+INSTL_FTP_NOLIST="Dh'fhàillig am foincsean "_QQ_"LIST"_QQ_"."
+INSTL_FTP_NOLOGIN="Dh'fhàillig an logadh a-steach dhan fhrithealaiche FTP."
+INSTL_FTP_NOMKD="Dh'fhàillig am foincsean "_QQ_"MKD"_QQ_"."
+INSTL_FTP_NONLST="Dh'fhàillig am foincsean "_QQ_"NLST"_QQ_"."
+INSTL_FTP_NOPWD="Dh'fhàillig am foincsean "_QQ_"PWD"_QQ_"."
+INSTL_FTP_NORETR="Dh'fhàillig am foincsean "_QQ_"RETR"_QQ_"."
+INSTL_FTP_NORMD="Dh'fhàillig am foincsean "_QQ_"RMD"_QQ_"."
+INSTL_FTP_NOROOT="Cha do ghabh inntrigeadh a dhèanamh dhan eòlaire FTP a shònraich thu."
+INSTL_FTP_NOSTOR="Dh'fhàillig am foincsean "_QQ_"STOR"_QQ_"."
+INSTL_FTP_NOSYST="Dh'fhàillig am foincsean "_QQ_"SYST"_QQ_"."
+INSTL_FTP_UNABLE_DETECT_ROOT_FOLDER="Cha do ghabh am pasgan freumhach FTP a lorgadh gu fèin-obrachail."
+
+;others
+INSTL_ADVANCED_SETTINGS="Roghainnean adhartach"
+INSTL_BASIC_SETTINGS="Bun-roghainnean"
+INSTL_CONFPROBLEM="Cha ghabh sgrìobhadh a dhèanamh san fhaidhle no san eòlaire rèiteachaidh agad no bha duilgheadas ann le cruthachadh an fhaidhle rèiteachaidh. Bidh agad ris a' chòd a leanas a luchdadh suas a làimh. Briog air toiseach an teacsa agus comharraich an teacsa gu lèir agus dèan lethbhreac dheth agus cuir e ann am faidhle teacsa ùr. Cuir 'configuration.php' air an fhaidhle seo agus luchdaich suas e gu pasgan freumhach na làraich agad."
+INSTL_DATABASE_SUPPORT="Taic stòir-dhàta:"
+INSTL_DISPLAY_ERRORS="Seall na mearachdan"
+INSTL_ERROR_DB="Thachair grunn mhearachdan nuair a bhathar a' chur dàta san stòr-dàta: %s"
+INSTL_ERROR_INITIALISE_SCHEMA="Can't initialise database schema"
+INSTL_FILE_UPLOADS="Luchdadh suas fhaidhlichean"
+INSTL_GNU_GPL_LICENSE="GNU General Public License"
+INSTL_INSTALLATION="Stàladh"
+INSTL_LICENSE="Ceadachas"
+INSTL_JSON_SUPPORT_AVAILABLE="Taic JSON"
+INSTL_MAGIC_QUOTES_GPC="Magic Quotes GPC Off"
+INSTL_MAGIC_QUOTES_RUNTIME="Magic Quotes Runtime"
+INSTL_MB_LANGUAGE_IS_DEFAULT="MB 'na chànan bunaiteach"
+INSTL_MB_STRING_OVERLOAD_OFF="MB String Overload dheth"
+INSTL_NOTICEMBLANGNOTDEFAULT="Chan eil an roghainn cànain PHP mbstring neodrach. 'S urrainn dhut seo a shuidheachadh gu ionadail ma chuireas tu a-steach <strong>php_value mbstring.language neutral</strong> san fhaidhle <code>.htaccess</code> agad."
+INSTL_NOTICEMBSTRINGOVERLOAD="Chaidh PHP mbstring function overload a shuidheachadh. 'S urrainn dhut seo a chur dheth gu ionadail ma chuireas tu a-steach <strong>php_value mbstring.func_overload 0</strong> san fhaidhle <code>.htaccess</code> agad."
+INSTL_NOTICEYOUCANSTILLINSTALL="<br />'S urrainn dhut leantainn air adhart leis an stàladh co-dhiù a chionn 's gun dèid roghainnean an rèiteachaidh a shealltainn dhut aig a' cheann thall. Bidh agad ris a' chòd a leanas a luchdadh suas a làimh. Briog air toiseach an teacsa agus comharraich an teacsa gu lèir agus dèan lethbhreac dheth agus cuir e ann am faidhle teacsa ùr. Cuir 'configuration.php' air an fhaidhle seo agus luchdaich suas e gu pasgan freumhach na làraich agad."
+INSTL_OUTPUT_BUFFERING="Output Buffering"
+INSTL_PARSE_INI_FILE_AVAILABLE="Taic INI Parser"
+INSTL_PHP_VERSION="Tionndadh PHP"
+INSTL_REGISTER_GLOBALS="Register Globals"
+INSTL_SAFE_MODE="Am modh sàbhailte"
+INSTL_SESSION_AUTO_START="Tòisich air seiseanan gu fèin-obrachail"
+INSTL_WRITABLE="So-sgrìobhte"
+INSTL_XML_SUPPORT="Taic XML"
+INSTL_ZIP_SUPPORT_AVAILABLE="Taic ZIP native (air a mholadh)"
+INSTL_ZLIB_COMPRESSION_SUPPORT="Taic dùmhlachadh Zlib"
+INSTL_PROCESS_BUSY="Pròiseas a' dol air adhart. Fuirich ort..."
+
+;Global strings
+JADMINISTRATOR="Rianaire"
+JADVANCED="Adhartach"
+JCHECK_AGAIN="Sgrùdaich a-rithist"
+JERROR="Mearachd"
+JEMAIL="Post-d"
+JGLOBAL_ISFREESOFTWARE="'S e bathar-bog saor a tha ann an %s agus tha e 'ga sgaoileadh fo <a href="_QQ_"http://www.gnu.org/licenses/gpl-2.0.html"_QQ_">GNU General Public License</a>."
+JGLOBAL_LANGUAGE_VERSION_NOT_PLATFORM="Chan eil a' phacaid cànain a' freagairt ris an tionndadh seo de Joomla!. Dh'fhaoidte gum bi cuid a dh'abairtean a dhìth."
+JGLOBAL_SELECT_AN_OPTION="Tagh roghainn"
+JGLOBAL_SELECT_NO_RESULTS_MATCH="Chan eil toradh sam bith a' freagairt"
+JGLOBAL_SELECT_SOME_OPTIONS="Tagh roghainnean"
+JINVALID_TOKEN="Chaidh an t-iarrtas mu dheireadh agad a dhiùltadh a chionn 's gun robh tòcan tèarainteachd mì-dhligheach ann. Ùraich an duilleag agus feuch ris a-rithist."
+JNEXT="Air adhart"
+JNO="Chan eil"
+JNOTICE="An aire"
+JOFF="Dheth"
+JON="Air"
+JPREVIOUS="Air ais"
+JSITE="Làrach"
+JUSERNAME="Cleachdaiche"
+JYES="Tha"
+
+; Framework strings necessary when no lang pack is available
+JLIB_DATABASE_ERROR_CONNECT_MYSQL="Cha do ghabh ceangal a dhèanamh ri MySQL."
+JLIB_DATABASE_ERROR_DATABASE="Thachair mearachd le stòr-dàta."
+JLIB_DATABASE_ERROR_LOAD_DATABASE_DRIVER="Cha ghabh draibhear an stòir-dhàta a luchdadh: %s"
+JLIB_ENVIRONMENT_SESSION_EXPIRED="Dh'fhalbh an ùine air do sheisean, feuch is luchdaich an duilleag a-rithist."
+JLIB_FORM_VALIDATE_FIELD_REQUIRED="Raon riatanach: %s"
+JLIB_FILESYSTEM_ERROR_PATH_IS_NOT_A_FOLDER_FILES="JFolder: :files: Chan eil pasgan a tha san t-slighe. Slighe: %s"
+JLIB_FORM_FIELD_INVALID="Raon mì-dhligheach:&#160;"
+JLIB_FORM_VALIDATE_FIELD_INVALID="Raon mì-dhligheach: %s"
+JLIB_UTIL_ERROR_CONNECT_DATABASE="JDatabase: :getInstance: Cha do ghabh ceangal a dhèanamh ri stòr-dàta <br />joomla.library: %1$s - %2$s"
+
+; Strings for the language debugger
+JDEBUG_LANGUAGE_FILES_IN_ERROR="Mearachdan parsaidh sna faidhlichean cànain"
+JDEBUG_LANGUAGE_UNTRANSLATED_STRING="Sreathan gun eadar-theangachadh"
+JNONE="Chan eil gin"
+
+; Necessary for errors
+ADMIN_EMAIL="Am post-dealain agad"
+ADMIN_PASSWORD="Facal-faire rianaire"
+ADMIN_PASSWORD2="Dearbhaich am facal-faire rianaire"
+SITE_NAME="Ainm na làraich"
+
+; Database types (allows for a more descriptive label than the internal name)
+MYSQL="MySQL"
+MYSQLI="MySQLi"
+ORACLE="Oracle"
+POSTGRESQL="PostgreSQL"
+SQLAZURE="Microsoft SQL Azure"
+SQLITE="SQLite"
+SQLSRV="Microsoft SQL Server"
